--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.5.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
     implementation 'androidx.fragment:fragment:1.3.0-alpha07'
+    implementation files ('libs/jword-1.0.jar')
 }
