--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ingeword">
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/inge"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/inge"
         android:supportsRtl="true"
         android:theme="@style/Theme.IngeWord"
         android:usesCleartextTraffic="true">
-        <activity android:name=".abrir_proyecto"></activity>
+        <activity android:name=".antesconclusion"  android:theme="@style/Theme.IngeWord.TemaPopup"></activity>
+        <activity
+            android:name=".antescuerpo"
+            android:theme="@style/Theme.IngeWord.TemaPopup" />
+        <activity
+            android:name=".antesIntro"
+            android:theme="@style/Theme.IngeWord.TemaPopup" />
+        <activity android:name=".open_proyect" />
+        <activity android:name=".abrir_proyecto" />
         <activity android:name=".editar_conclu_activity" />
         <activity android:name=".editar_cuerpo_activity" />
         <activity android:name=".editar_intro_activity" />
